--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"D:\\Proyectos\\Subastas\\Subastas","type":"PROJECT","hints":{"PROJECT_NAME":"Subastas"}},"ABSENT"],[{"location":"C:\\Program Files\\Java\\jre1.8.0_161","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"]]
+[[{"location":"C:\\Program Files\\Java\\jre1.8.0_161","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.8"}},"jre:jre:1.8.0"],[{"location":"D:\\Proyectos\\Subastas\\Subastas","type":"PROJECT","hints":{"PROJECT_NAME":"Subastas"}},"ABSENT"]]
